--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meteora</title>
+    <link rel="stylesheet" href="estilos.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -165,8 +170,8 @@
       </button>
     </div>
     <h2 class="text-center">Busque por categoria:</h2>
-    <div class="container row">
-      <div class="col-6">
+    <div class="container row mx-auto g-4">
+      <div class="col-6 col-md-4 col-xxl-2">
         <div class="card">
           <svg
             class="bd-placeholder-img card-img-top"
@@ -188,7 +193,7 @@
         </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-6 col-md-4 col-xxl-2">
         <div class="card">
           <svg
             class="bd-placeholder-img card-img-top"
@@ -210,7 +215,7 @@
         </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-6 col-md-4 col-xxl-2">
         <div class="card">
           <svg
             class="bd-placeholder-img card-img-top"
@@ -232,7 +237,7 @@
         </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-6 col-md-4 col-xxl-2">
         <div class="card">
           <svg
             class="bd-placeholder-img card-img-top"
@@ -254,7 +259,7 @@
         </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-6 col-md-4 col-xxl-2">
         <div class="card">
           <svg
             class="bd-placeholder-img card-img-top"
@@ -276,7 +281,7 @@
         </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-6 col-md-4 col-xxl-2">
         <div class="card">
           <svg
             class="bd-placeholder-img card-img-top"
@@ -299,163 +304,207 @@
       </div>
     </div>
     <h2 class="text-center">Produtos que estáo bombados!</h2>
-    <div cla dicss="container">
-      <div class="card">
-        <svg
-          class="bd-placeholder-img card-img-top"
-          width="100%"
-          height="180"
-          xmlns="http://www.w3.org/2000/svg"
-          role="img"
-          aria-label="Placeholder: Image cap"
-          preserveAspectRatio="xMidYMid slice"
-          focusable="false"
-        >
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#868e96"></rect>
-          <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-        </svg>
-        <div class="card-body">
-          <h5 class="card-title">Produto</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
+    <div class="container row mx-auto">
+      <div class="col-12 col-md-6 col-xxl-4 pb-4">
+        <div class="card">
+          <svg
+            class="bd-placeholder-img card-img-top"
+            width="100%"
+            height="180"
+            xmlns="http://www.w3.org/2000/svg"
+            role="img"
+            aria-label="Placeholder: Image cap"
+            preserveAspectRatio="xMidYMid slice"
+            focusable="false"
+          >
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#868e96"></rect>
+            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+          </svg>
+          <div class="card-body">
+            <h5 class="card-title">Produto</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <p>R$30,00</p>
+            <a href="#" class="btn btn-primary">Ver mais</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-xxl-4 pb-4">
+        <div class="card">
+          <svg
+            class="bd-placeholder-img card-img-top"
+            width="100%"
+            height="180"
+            xmlns="http://www.w3.org/2000/svg"
+            role="img"
+            aria-label="Placeholder: Image cap"
+            preserveAspectRatio="xMidYMid slice"
+            focusable="false"
+          >
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#868e96"></rect>
+            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+          </svg>
+          <div class="card-body">
+            <h5 class="card-title">Produto</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <p>R$30,00</p>
+            <a href="#" class="btn btn-primary">Ver mais</a>
+          </div>
         </div>
       </div>
 
-      <div class="card">
-        <svg
-          class="bd-placeholder-img card-img-top"
-          width="100%"
-          height="180"
-          xmlns="http://www.w3.org/2000/svg"
-          role="img"
-          aria-label="Placeholder: Image cap"
-          preserveAspectRatio="xMidYMid slice"
-          focusable="false"
-        >
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#868e96"></rect>
-          <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-        </svg>
-        <div class="card-body">
-          <h5 class="card-title">Produto</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
+      <div class="col-12 col-md-6 col-xxl-4 pb-4">
+        <div class="card">
+          <svg
+            class="bd-placeholder-img card-img-top"
+            width="100%"
+            height="180"
+            xmlns="http://www.w3.org/2000/svg"
+            role="img"
+            aria-label="Placeholder: Image cap"
+            preserveAspectRatio="xMidYMid slice"
+            focusable="false"
+          >
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#868e96"></rect>
+            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+          </svg>
+          <div class="card-body">
+            <h5 class="card-title">Produto</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <p>R$30,00</p>
+            <a href="#" class="btn btn-primary">Ver mais</a>
+          </div>
         </div>
       </div>
 
-      <div class="card">
-        <svg
-          class="bd-placeholder-img card-img-top"
-          width="100%"
-          height="180"
-          xmlns="http://www.w3.org/2000/svg"
-          role="img"
-          aria-label="Placeholder: Image cap"
-          preserveAspectRatio="xMidYMid slice"
-          focusable="false"
-        >
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#868e96"></rect>
-          <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-        </svg>
-        <div class="card-body">
-          <h5 class="card-title">Produto</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
+      <div class="col-12 col-md-6 col-xxl-4 pb-4">
+        <div class="card">
+          <svg
+            class="bd-placeholder-img card-img-top"
+            width="100%"
+            height="180"
+            xmlns="http://www.w3.org/2000/svg"
+            role="img"
+            aria-label="Placeholder: Image cap"
+            preserveAspectRatio="xMidYMid slice"
+            focusable="false"
+          >
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#868e96"></rect>
+            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+          </svg>
+          <div class="card-body">
+            <h5 class="card-title">Produto</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <p>R$30,00</p>
+            <a href="#" class="btn btn-primary">Ver mais</a>
+          </div>
         </div>
       </div>
 
-      <div class="card">
-        <svg
-          class="bd-placeholder-img card-img-top"
-          width="100%"
-          height="180"
-          xmlns="http://www.w3.org/2000/svg"
-          role="img"
-          aria-label="Placeholder: Image cap"
-          preserveAspectRatio="xMidYMid slice"
-          focusable="false"
-        >
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#868e96"></rect>
-          <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-        </svg>
-        <div class="card-body">
-          <h5 class="card-title">Produto</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
+      <div class="col-12 col-md-6 col-xxl-4 pb-4">
+        <div class="card">
+          <svg
+            class="bd-placeholder-img card-img-top"
+            width="100%"
+            height="180"
+            xmlns="http://www.w3.org/2000/svg"
+            role="img"
+            aria-label="Placeholder: Image cap"
+            preserveAspectRatio="xMidYMid slice"
+            focusable="false"
+          >
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#868e96"></rect>
+            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+          </svg>
+          <div class="card-body">
+            <h5 class="card-title">Produto</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <p>R$30,00</p>
+            <a href="#" class="btn btn-primary">Ver mais</a>
+          </div>
         </div>
       </div>
-      dic
-      <div class="card">
-        <svg
-          class="bd-placeholder-img card-img-top"
-          width="100%"
-          height="180"
-          xmlns="http://www.w3.org/2000/svg"
-          role="img"
-          aria-label="Placeholder: Image cap"
-          preserveAspectRatio="xMidYMid slice"
-          focusable="false"
-        >
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#868e96"></rect>
-          <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-        </svg>
-        <div class="card-body">
-          <h5 class="card-title">Produto</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
-        </div>
-      </div>
-      dic
-      <div class="card">
-        <svg
-          class="bd-placeholder-img card-img-top"
-          width="100%"
-          height="180"
-          xmlns="http://www.w3.org/2000/svg"
-          role="img"
-          aria-label="Placeholder: Image cap"
-          preserveAspectRatio="xMidYMid slice"
-          focusable="false"
-        >
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#868e96"></rect>
-          <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-        </svg>
-        <div class="card-body">
-          <h5 class="card-title">Produto</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
+
+      <div class="col-12 col-md-6 col-xxl-4 pb-4">
+        <div class="card">
+          <svg
+            class="bd-placeholder-img card-img-top"
+            width="100%"
+            height="180"
+            xmlns="http://www.w3.org/2000/svg"
+            role="img"
+            aria-label="Placeholder: Image cap"
+            preserveAspectRatio="xMidYMid slice"
+            focusable="false"
+          >
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#868e96"></rect>
+            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+          </svg>
+          <div class="card-body">
+            <h5 class="card-title">Produto</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <p>R$30,00</p>
+            <a href="#" class="btn btn-primary">Ver mais</a>
+          </div>
         </div>
       </div>
     </div>
+
+    <section class="pb-4">
+      <h2 class="text-center">Conheça todas as nossas facilidades</h2>
+
+      <div class="d-flex flex-column align-items-center gap-3">
+        <div class="divs-facilidades d-flex">
+          <div><i class="bi bi-x-diamond fs-1"></i></div>
+          <div>
+            <div class="ms-3 mb-1">PAGUE PELO PIX</div>
+            <div class="texto-menor ms-3">Ganhe 5% OFF em pagamentos PIX</div>
+          </div>
+        </div>
+
+        <div class="divs-facilidades d-flex">
+          <div><i class="bi bi-arrow-repeat fs-1"></i></div>
+          <div>
+            <div class="ms-3 mb-1">TROCA GRÁTIS</div>
+            <div class="texto-menor ms-3">Fique para trocar em até 30 dias</div>
+          </div>
+        </div>
+
+        <div class="divs-facilidades d-flex">
+          <div><i class="bi bi-flower1 fs-1"></i></div>
+          <div>
+            <div class="ms-3 mb-1">SUSTENTABILIDADE</div>
+            <div class="texto-menor ms-3">
+              Moda responsável que respeita o meio ambiente
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
